Remove profile for jdk8 with Tomcat Add --add-opens java.base/java.io=ALL-UNNAMED to tests args