@@ -62,6 +62,9 @@
         <maven.jacoco.plugin.version>0.7.9</maven.jacoco.plugin.version>
         <maven-release-plugin-version>3.0.1</maven-release-plugin-version>
         <mockito.version>5.12.0</mockito.version>
+
+        <!-- Required for tests with Tomcat and jdk 17 -->
+        <javaModuleArgs>--add-opens java.base/java.io=ALL-UNNAMED</javaModuleArgs>
     </properties>
 
     <licenses>
@@ -152,6 +155,7 @@
                         -Dhazelcast.test.use.network=false
                         -Djava.net.preferIPv4Stack=true
                         -Dhazelcast.logging.type=log4j2
+                        ${javaModuleArgs}
                     </argLine>
                 </configuration>
             </plugin>
@@ -544,15 +548,6 @@
         </profile>
         <profile>
             <id>test-coverage</id>
-            <properties>
-                <argLine>
-                    -Xms128m -Xmx2G
-                    -Dhazelcast.version.check.enabled=false
-                    -Dhazelcast.mancenter.enabled=false
-                    -Dhazelcast.test.use.network=false
-                    -Djava.net.preferIPv4Stack=true
-                </argLine>
-            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -568,6 +563,14 @@
                         <configuration combine.self="override">
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <testFailureIgnore>true</testFailureIgnore>
+                            <argLine>
+                                -Xms128m -Xmx2G
+                                -Dhazelcast.version.check.enabled=false
+                                -Dhazelcast.mancenter.enabled=false
+                                -Dhazelcast.test.use.network=false
+                                -Djava.net.preferIPv4Stack=true
+                                ${javaModuleArgs}
+                            </argLine>
                         </configuration>
                     </plugin>
 
@@ -705,63 +708,5 @@
             </properties>
         </profile>
 
-        <profile>
-            <!-- SUP-420 case. Tomcat 9.0.z and 5.3.z hazelcast. Using jdk 1.8 because tomcat supports 1.8.
-             Therefore, we have to exclude jetty tests from compiling/running and jetty classes from classpath
-              because they require jdk 11. -->
-            <id>tomcat-jdk8</id>
-            <properties>
-                <hazelcast.version>5.3.7</hazelcast.version>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>${maven.compiler.plugin.version}</version>
-                        <executions>
-                            <execution>
-                                <id>default-testCompile</id>
-                                <phase>test-compile</phase>
-                                <goals>
-                                    <goal>testCompile</goal>
-                                </goals>
-                                <configuration>
-                                    <testExcludes>
-                                        <exclude>
-                                            com/hazelcast/wm/test/jetty/**/*.java
-                                        </exclude>
-                                    </testExcludes>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <source>${jdk.version}</source>
-                            <target>${jdk.version}</target>
-                        </configuration>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven.surefire.plugin.version}</version>
-                        <configuration combine.self="override">
-                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                            <runOrder>failedfirst</runOrder>
-                            <excludes>
-                                <exclude>
-                                    com.hazelcast.wm.test.jetty.*
-                                </exclude>
-                            </excludes>
-                            <classpathDependencyExcludes>
-                                <classpathDependencyExclude>
-                                    org.eclipse.jetty:apache-jsp
-                                </classpathDependencyExclude>
-                            </classpathDependencyExcludes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 </project>
